# schema-guard

./: .gitignore  AGENTS.md  LICENSE  README.md  SKILLS.md  main.py  pyproject.toml  roadmap.md
memory/: memory.md  roadmap.md
schema_guard/: __init__.py  __main__.py  cli.py
schema_guard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
schema_guard/connectors/: __init__.py  base.py  duckdb.py
schema_guard/core/: __init__.py  comparator.py  extractor.py  normalizer.py  reporter.py  service.py
schema_guard/models/: __init__.py  drift.py  schema.py
schema_guard/utils/: __init__.py  normalization.py  type_inference.py
tests/: test_cli.py  test_comparator.py  test_duckdb_connector.py  test_extractor.py  test_normalizer.py
