[project]
name = "schema-guard"
version = "0.1.0"
description = "Detect schema drift between CSV files and DuckDB tables."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "typer>=0.12.3",
]

[project.scripts]
schema-guard = "schema_guard.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["schema_guard*"]
